--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,11 @@
 {
   "version": "0.0.1-alpha.1",
+  "tasks": {
+    "dev:examples": "deno task --cwd=projects/examples dev"
+  },
   "workspace": [
-    "./mods/mod-deno-math"
+    "./mods/mod-deno-math",
+    "./projects/examples"
   ],
   "publish": {
     "exclude": [
