add workspace path to deno.jsonc and add bat-file to update submoules

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -5,6 +5,7 @@
   },
   "workspace": [
     "./mods/mod-deno-math",
+    "./mods/fs-structure-reader",
     "./projects/examples"
   ],
   "publish": {
