--- a/projects/examples/deno.jsonc
+++ b/projects/examples/deno.jsonc
@@ -4,8 +4,6 @@
     "dev": "deno run --watch main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1",
-    "/": "./",
-    "./": "./"
+    "@std/assert": "jsr:@std/assert@1"
   }
 }
